// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Firebase Service addDocument adds a new document to the database 1`] = `
Object {
  "body": Object {
    "one": "alpha",
    "three": "gamma",
    "two": "beta",
  },
  "id": "foo",
  "rev": "1-a4458b5abfe79114044210d538dc782e9310ea680e3f31956496a994f04d105d",
}
`;

exports[`Firebase Service addDocument returns the added document 1`] = `
Object {
  "body": "{\\"one\\":\\"alpha\\",\\"two\\":\\"beta\\",\\"three\\":\\"gamma\\"}",
  "id": "foo",
  "rev": "1-a4458b5abfe79114044210d538dc782e9310ea680e3f31956496a994f04d105d",
}
`;

exports[`Firebase Service addDocument returns the updated document 1`] = `
Object {
  "body": "{\\"one\\":\\"alpha\\",\\"two\\":\\"beta\\",\\"three\\":\\"gamma\\"}",
  "id": "foo",
  "rev": "2-a4458b5abfe79114044210d538dc782e9310ea680e3f31956496a994f04d105d",
}
`;

exports[`Firebase Service addDocument updates an existing document in the database 1`] = `
Object {
  "body": Object {
    "one": "alpha",
    "three": "gamma",
    "two": "beta",
  },
  "id": "foo",
  "rev": "2-a4458b5abfe79114044210d538dc782e9310ea680e3f31956496a994f04d105d",
}
`;

exports[`Firebase Service deleteDocument deletes the document from the database 1`] = `
Object {
  "deleted": true,
  "id": "foo",
  "rev": "2-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
}
`;

exports[`Firebase Service deleteDocument returns the deleted entry 1`] = `
Object {
  "deleted": true,
  "id": "foo",
  "rev": "2-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
}
`;

exports[`Firebase Service documentByID retrieves the document with given id 1`] = `
Object {
  "body": "{\\"one\\":\\"alpha\\",\\"two\\":\\"beta\\",\\"three\\":\\"gamma\\"}",
  "id": "foo",
  "rev": "1-abc",
}
`;

exports[`Firebase Service documents obtains a list of documents from the firebase 1`] = `
Array [
  Object {
    "body": "{\\"three\\":\\"delta\\",\\"four\\":\\"epsilon\\",\\"five\\":\\"omega\\"}",
    "id": "bar",
    "rev": "2-def",
  },
  Object {
    "body": "{\\"one\\":\\"alpha\\",\\"two\\":\\"beta\\",\\"three\\":\\"gamma\\"}",
    "id": "foo",
    "rev": "1-abc",
  },
]
`;
